[package]
name = "buddhabrust"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>", "Charlotte Vermandel"]
edition = "2018"

[dependencies]
rayon = "1.3.0"
mandelbrust = { git = "https://github.com/irevoire/mandelbrust", rev = "b1e51e4" }

[[bench]]
name = "buddha"
harness = false

[dev-dependencies]
criterion = "0.3"

[workspace]
members = ["gui", "cli"]
