[package]
name = "gui"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>", "Charlotte Vermandel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
image = "0.23.14"
buddhabrust = { path = ".." }
